# ask-your-repository-api

./: .coveragerc  .env.dc  .env.dc.testing  .env.develop  .env.example  .env.testing  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  Dockerfile  LICENSE.md  Pipfile  README.md  app.py  artefact-service.ini  docker-compose.env  docker-compose.yml  elasticsearch.example.yml  nginx.conf  production.py  prospector.yaml  pyproject.toml  requirements-freeze.txt  requirements.txt  setup.cfg  start-gunicorn.sh
.circleci/: config.yml  docker-compose.ci.yml
application/: __init__.py  application_helpers.py  background.py  base.py  base_schema.py  custom_loggers.py  debug_scripts.py  errors.py  extensions.py  misc.py  model_mixins.py  models.py  responders.py  routes.py  schema.py  socketio_parser.py
application/artefacts/: __init__.py  artefacts_controller.py  artefacts_routes.py
application/artifacts/: __init__.py  aritfact_routes.py  artifact.py  artifact_builder.py  artifact_connector.py  artifact_creation.py  artifact_deletor.py  artifact_recommendation.py  artifact_schema.py  artifacts_controller.py  artifacts_helper.py  artifacts_routes.py  artifacts_validator.py  artifacts_view.py  image_recognition.py  property_builder.py  synonyms.py
application/authentications/: __init__.py  authentications_routes.py  authentications_validator.py  authentications_view.py
application/controllers/: application_controller.py  artifacts_controller.py  authentications_controller.py  dialogflow_artifacts_controller.py  home_controller.py  presentations_controller.py  tags_controller.py  teams_controller.py  users_controller.py
application/date/: date_extraction.py  date_schema.py  day.py  month.py  year.py
application/error_handling/: es_connection.py  request_parsing.py
application/helpers/: artifact_helper.py
application/home/: __init__.py  home_controller.py  home_routes.py  home_view.py
application/invites/: __init__.py  invites_routes.py  invites_validator.py  invites_view.py
application/models/: __init__.py  artifact.py  artifact_builder.py  elastic_artifact.py  esmodel.py  neo_artifact.py  neo_model.py  neo_ogm_model.py  neo_tag.py  property_builder.py  tag.py  team.py  (+1 more)
instance/: development_config.cfg  production_config.cfg  test_config.cfg
specs/: artifacts_spec.py  mock_elasticsearch.py  spec_helpers.py
tests/: conftest.py  mock_elasticsearch.py  test_artefacts.py  test_elasticsearch.py  test_home.py  test_misc.py
utils/: delete_indices.py  download_wordkit.py  setup_elasticsearch.py  setup_indices.py  setup_neo_constraints.py
(+176 files in other folders)
