[tool.poetry]
name = "Elija"
version = "0.1.0"
description = "https://github.com/hpi-sam/ask-your-repository-api"
authors = ["Jascha Beste <jascha.beste@student.hpi.de>"]

[tool.poetry.dependencies]
python = ">=3.7"
Flask = "==1.0.2"
elasticsearch = "*"
python-dotenv = "*"
gunicorn = "*"
flask-cors = "*"
webargs = "*"
flask-socketio = "*"
eventlet = "*"
requests = "*"
textblob = "*"
nltk = "*"
shovel = "*"
neomodel = "==3.2.9" # version 3.3.0 is broken with flask!
flask-jwt-extended = "^3.17"
flask-bcrypt = "^0.7.1"
flask-apispec = "^0.8.0"
google-auth = "^1.6"
google-auth-oauthlib = "^0.2.0"
google-auth-httplib2 = "^0.0.3"
Pillow = "*"
responses = "^0.10.6"
flask-mail = "^0.9.1"
flake8-print = "^3.1"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pre-commit = "^1.15"

[tool.poetry.dev-dependencies]
coverage = "*"
python-coveralls = "*"
mamba = "*"
expects = "*"
doublex = "*"
doublex-expects = "*"
pep8 = "*"
autopep8 = "*"
rope = "*"
PyHamcrest = "*"

[tool.black]
line-length = 120
target-version = ['py37']
